--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-tensorflow==2.15.0
-deepface==0.0.93
-opencv-python
 streamlit
-tf-keras
+deepface==0.0.93
+opencv-python-headless
+numpy
+pillow
+playsound==1.3.0
+tensorflow==0.0.0
+tf-keras==0.0.0
